--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link href="https://db.onlinewebfonts.com/c/e8e79179db1d77cb681cc65836ddbacc?family=Alverata+Informal+W01+Regular" rel="stylesheet">
   </head>
   <body>
     <nav id="desktop-nav">
