--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
-    <link href="https://db.onlinewebfonts.com/c/e8e79179db1d77cb681cc65836ddbacc?family=Alverata+Informal+W01+Regular" rel="stylesheet">
+    <link
+      href="https://db.onlinewebfonts.com/c/e8e79179db1d77cb681cc65836ddbacc?family=Alverata+Informal+W01+Regular"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre&family=Stylish&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="noise overlay">
     <nav id="desktop-nav">
       <div class="logo">Akeem Chambers</div>
       <div>
