--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body class="noise overlay">
     <nav id="desktop-nav">
-      <div class="logo">Akeem Chambers</div>
+      <div class="logo"></div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -48,23 +48,23 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/circ img.png" alt="John Doe profile picture" />
+        <img src="./assets/square-pic5.png" alt="John Doe profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Akeem Chambers</h1>
         <p class="section__text__p2">Full-Stack Engineer</p>
-        <div class="btn-container">
+        <!-- <div class="btn-container">
           <button
             class="btn btn-color-2"
             onclick="window.open('./assets/resume.pdf')"
           >
             Download Resume
           </button>
-          <!-- <button class="btn btn-color-1" onclick="location.href='./#contact'">
+          <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
-          </button> -->
-        </div>
+          </button>
+        </div> -->
         <div id="socials-container">
           <img
             src="./assets/linkedin.png"
@@ -85,13 +85,13 @@
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
-        <div class="section__pic-container">
-          <!-- <img
+        <!-- <div class="section__pic-container">
+          <img
             src="./assets/about-pic.png"
             alt="Profile picture"
             class="about-pic"
-          /> -->
-        </div>
+          />
+        </div> -->
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
